feat: cash free changes to access the payment gateway